plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.405beside'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

tasks.withType(JavaCompile) {
	options.compilerArgs << "-parameters"
}

repositories {
	mavenCentral()
}
configurations {
	providedRuntime
}

dependencies {
	//https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
	//security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	//web
	implementation 'org.springframework.boot:spring-boot-starter-web'
	//tomcat
	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
	// JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	// Thymeleaf
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	// web
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'
	// lombok
	compileOnly 'org.projectlombok:lombok'
	// devTools
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	//MySql
	runtimeOnly 'mysql:mysql-connector-java:8.0.33' //버전명까지 써줘야함
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation platform('org.springframework.boot:spring-boot-dependencies:2.7.15')
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'

	implementation 'com.auth0:java-jwt:4.2.1'

	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
}

tasks.named('test') {
	useJUnitPlatform()
}
